{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 50,
  "lineage": "827cc698-ec25-1f4c-914d-f9a1ca11fee0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/backendAddressPools/aks-backend-pool",
                "ip_addresses": [],
                "name": "aks-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/frontendIPConfigurations/appgw-frontend-ip",
                "name": "appgw-frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/publicIPAddresses/pip-appgw-dev",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/frontendIPConfigurations/appgw-frontend-ip",
                "frontend_ip_configuration_name": "appgw-frontend-ip",
                "frontend_port_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev",
            "identity": [],
            "location": "eastus",
            "name": "appgw-cloudnative-dev",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/backendAddressPools/aks-backend-pool",
                "backend_address_pool_name": "aks-backend-pool",
                "backend_http_settings_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/applicationGateways/appgw-cloudnative-dev/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-cloudnative-dev",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "environment": "dev",
              "project": "cloudnative"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Detection",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.appgw",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-dev",
            "location": "eastus",
            "name": "nsg-aks-dev",
            "resource_group_name": "rg-cloudnative-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "cloudnative"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/publicIPAddresses/pip-appgw-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.117.249.118",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-appgw-dev",
            "resource_group_name": "rg-cloudnative-dev",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "cloudnative"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-aks",
            "name": "subnet-aks",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cloudnative-dev",
            "virtual_network_name": "vnet-cloudnative-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cloudnative-dev",
            "virtual_network_name": "vnet-cloudnative-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-aks",
            "network_security_group_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-dev",
            "subnet_id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-aks"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.aks",
            "azurerm_resource_group.main",
            "azurerm_subnet.aks",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7a4f903e-b1c5-44e0-bed1-2a519df4228d",
            "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev",
            "location": "eastus",
            "name": "vnet-cloudnative-dev",
            "resource_group_name": "rg-cloudnative-dev",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-aks",
                "name": "subnet-aks",
                "security_group": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-aks-dev"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/2e0449b1-e93f-40c6-8af2-f1bd7a7e9e07/resourceGroups/rg-cloudnative-dev/providers/Microsoft.Network/virtualNetworks/vnet-cloudnative-dev/subnets/subnet-appgw",
                "name": "subnet-appgw"
              }
            ],
            "tags": {
              "environment": "dev",
              "project": "cloudnative"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}